test/log/reduction/vardotacc_vv_u16.txt
vardotacc_vv_u16.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vardotacc_vv_u16.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vardotacc_vv_u16.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vardotacc_vv_u16.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vardotacc_vv_u16.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vardotacc_vv_u16.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vardotacc_vv_u16.c:22:6: warning: no previous prototype for 'vardotacc_vv_u16_golden' [-Wmissing-prototypes]
   22 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16.c: In function 'vardotacc_vv_u16_golden':
vardotacc_vv_u16.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vardotacc_vv_u16.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vardotacc_vv_u16.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vardotacc_vv_u16.c:22:40: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                              ~~~~~~~~~~^
vardotacc_vv_u16.c:22:51: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                          ~~~~~~~~~^
vardotacc_vv_u16.c:22:62: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                                     ~~~~~~~~~^
vardotacc_vv_u16.c:22:74: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vardotacc_vv_u16_golden(uint32_t *a,int16_t *b,int16_t *c,uint32_t *exp_result) {
      |                                                                ~~~~~~~~~~^~~~~~~~~~
vardotacc_vv_u16.c: In function 'main':
vardotacc_vv_u16.c:48:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   48 |     result = vardotacc_vv_u16(a,b,c);
      |     ^~~~~~
vardotacc_vv_u16.c:48:33: error: incompatible type for argument 2 of 'vardotacc_vv_u16'
   48 |     result = vardotacc_vv_u16(a,b,c);
      |                                 ^
      |                                 |
      |                                 int16x32_t
In file included from vardotacc_vv_u16.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1946:1: note: expected 'uint16x32_t' but argument is of type 'int16x32_t'
 1946 | __RUGRATS_DOTACC_VV_OP (ardotacc, u, uint, 32, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16.c:48:35: error: incompatible type for argument 3 of 'vardotacc_vv_u16'
   48 |     result = vardotacc_vv_u16(a,b,c);
      |                                   ^
      |                                   |
      |                                   int16x32_t
In file included from vardotacc_vv_u16.c:4:
/opt/analog/riscv/1.0.0/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1946:1: note: expected 'uint16x32_t' but argument is of type 'int16x32_t'
 1946 | __RUGRATS_DOTACC_VV_OP (ardotacc, u, uint, 32, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~~
vardotacc_vv_u16.c:53:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   53 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vardotacc_vv_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vardotacc_vv_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vardotacc_vv_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed